--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -325,6 +325,7 @@ aside img {
         position: fixed;
         bottom: 0;
         width: 100%;
+        height:72px;
         float: left;
     }
 }
@@ -332,45 +333,86 @@ aside img {
 
 @media screen and (max-width: 640px) and (min-width:0) {
     body {
-        border: 1px solid blue;
-        width: 50%;
+        border: 1px solid black;
     }
 
+	#navbar {
+	    position: relative;
+	    top:85px;
+	    left:10%;
+	   	float:left;
+	    font-family: Arial;
+	    font-size: 1.4em;
+	    color: rgba(255, 255, 255, 0.5);
+	    word-spacing: 2em;
+	    padding: 2em;
+	    padding-right:0;
+	}
 
     .name {
         background-color: rgb(0, 174, 167);
-        width: 195px;
-        height: 70px;
-        position: relative;
-        left: 16px;
-        font-size: 1.2em;
+        width: 100%;
+        height: 85px;
+        position:relative;
+        top:-115px;
+        left:0;
         text-align: center;
+        clear:both;
     }
+
+    .name h1 {
+    	margin-top:15px;
+    	font-size:1.5em;
+    }
+
     /* MAIN CONTENT */
     .main {
         overflow: auto;
         width: 100%;
+
     }
 
     #about {
-        width: 256px;
+        width: 560px;
+		position: relative;
+        left: 15px;
+        top: 25px;
+		
+
     }
 
-
+	#about h1 {
+		font-size:2em;
+   }
 
     #about img {
         width: inherit;
-        height: 165px;
+        height: 375px;
         float: none;
     }
 
     /* SIDE BAR/SOCIAL MEDIA */
     aside {
-        width: 165px;
+        width: 560px;
         padding: 20px;
+        float:left;
+        margin-bottom:100px;
         position: relative;
-        top: -765px;
-        right: 350px;
+        top: 50px;
+        left: 15px;
+        clear:both;
+    }
+	
+	aside h2 {
+		margin:15px;
+
+	}
+
+
+    span {
+    	float: left;
+    	font-size: 2em;
+        margin-top: -15px;
     }
 
     aside img {
