--- a/assets/css/contact-style.css
+++ b/assets/css/contact-style.css
@@ -180,3 +180,266 @@ aside img {
 	margin-top:26px;
 	font-size:10px;
 }
+
+
+
+
+@media only screen and (max-width: 980px) {
+    body {
+        border: 1px solid black;
+        width: 100%;
+    }
+	#navbar {
+		position:relative;
+		left:-78px;
+	
+
+	}
+    .name {
+    	
+    	width:152px;
+    }
+
+    /* MAIN CONTENT */
+    .main {
+        overflow: auto;
+        width: 100%;
+    }
+
+    #about {
+        width: 256px;
+    }
+
+
+
+    #about img {
+        width: inherit;
+        height: 165px;
+        float: none;
+    }
+
+    /* SIDE BAR/SOCIAL MEDIA */
+    aside {
+        width: 164px;
+        padding: 20px;
+        position: relative;
+        top: -27.92em;
+        left:36em;
+        float: left;
+    }
+
+    aside img {
+        height: 40px;
+        width: 40px;
+        padding: 10px;
+        float: left;
+        margin-left: 15px;
+    }
+
+    /* FOOTER AREA */
+    .footer {
+        width: 100%;
+    }
+}
+
+
+@media screen and (max-width: 768px) and (min-width: 641px) {
+    body {
+        border: 1px solid black;
+        width: 100%;
+    }
+
+    .clearfix::after {
+        content: “”;
+        display: block;
+        clear: both;
+    }
+
+
+    .name {
+        background-color: rgb(0, 174, 167);
+        width: 195px;
+        height: 70px;
+        position: relative;
+        left: 16px;
+        font-size: 1.2em;
+        text-align: center;
+    }
+
+    #navbar {
+        position: relative;
+        left: 0;
+        font-family: Arial;
+        font-size: .8em;
+        color: rgba(255, 255, 255, 0.5);
+        float: right;
+        word-spacing: 2em;
+        padding: 2em;
+    }
+
+    /* MAIN CONTENT */
+    .main {
+        overflow: auto;
+        width: 100%;
+    }
+
+    #about {
+        width: 565px;
+        position: relative;
+        left: 75px;
+        top: 25px;
+    }
+
+
+
+    #about img {
+        width: 260px;
+        height: 195px;
+        float: left;
+    }
+
+    /* SIDE BAR/SOCIAL MEDIA */
+    aside {
+        clear: both;
+        margin-bottom: 100px;
+        height: auto;
+        float: left;
+        width: 565px;
+        padding: 18px;
+        position: relative;
+        top: 60px;
+        left: 75px;
+    }
+
+    aside h2 {
+        border-bottom: 2px solid rgba(0, 0, 0, 0.1);
+        font-size: 1.2em;
+        margin-top: 10px;
+    }
+
+    span {
+        float: left;
+        margin-top: -10px;
+    }
+
+    .connect {
+        clear: both;
+        float: left;
+    }
+
+    aside img {
+        height: 40px;
+        width: 40px;
+        padding: 10px;
+        margin-top: 10px;
+        margin-left: 15px;
+    }
+
+    /* FOOTER AREA */
+    .footer {
+        position: fixed;
+        bottom: 0;
+        width: 100%;
+        height:72px;
+        float: left;
+    }
+}
+
+
+@media screen and (max-width: 640px) and (min-width:0) {
+    body {
+        border: 1px solid black;
+    }
+
+	#navbar {
+	    position: relative;
+	    top:85px;
+	    left:10%;
+	   	float:left;
+	    font-family: Arial;
+	    font-size: 1.4em;
+	    color: rgba(255, 255, 255, 0.5);
+	    word-spacing: 2em;
+	    padding: 2em;
+	    padding-right:0;
+	}
+
+    .name {
+        background-color: rgb(0, 174, 167);
+        width: 100%;
+        height: 85px;
+        position:relative;
+        top:-115px;
+        left:0;
+        text-align: center;
+        clear:both;
+    }
+
+    .name h1 {
+    	margin-top:15px;
+    	font-size:1.5em;
+    }
+
+    /* MAIN CONTENT */
+    .main {
+        overflow: auto;
+        width: 100%;
+
+    }
+
+    #about {
+        width: 560px;
+		position: relative;
+        left: 15px;
+        top: 25px;
+		
+
+    }
+
+	#about h1 {
+		font-size:2em;
+   }
+
+    #about img {
+        width: inherit;
+        height: 375px;
+        float: none;
+    }
+
+    /* SIDE BAR/SOCIAL MEDIA */
+    aside {
+        width: 560px;
+        padding: 20px;
+        float:left;
+        margin-bottom:100px;
+        position: relative;
+        top: 50px;
+        left: 15px;
+        clear:both;
+    }
+	
+	aside h2 {
+		margin:15px;
+
+	}
+
+
+    span {
+    	float: left;
+    	font-size: 2em;
+        margin-top: -15px;
+    }
+
+    aside img {
+        height: 40px;
+        width: 40px;
+        padding: 10px;
+        float: left;
+        margin-left: 15px;
+    }
+
+    /* FOOTER AREA */
+    .footer {
+        width: 100%;
+    }
+}
