--- a/assets/css/contact-style.css
+++ b/assets/css/contact-style.css
@@ -1,274 +1,35 @@
-/* BASE STYLES */
+        /* BASE STYLES */
 
-* {
-	margin: 0 auto;
-}
+    * {
+        margin: 0 auto;
+    }
 
-body, html {
-	height: 100%; 
-}
-
-
-p {
-	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-	color:#777777
-}
-
-h1,h2,h3 {
-	font-family: 'Georgia', Times, Times New Roman, serif;
-}
-
-body {
-	margin: 0 auto;
-	width:960px;
-}
+    body,
+    html {
+        height: 100%;
+    }
 
 
-/* HEADER AREA */
+    p {
+        font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+        color: #777777
+    }
 
-#navbar {
-	position:relative;
-	left:-20%;
-	font-family: Arial;
-	font-size:.8em;
-	color: rgba(255, 255, 255, 0.5);
-	float:right;
-	word-spacing: 2em;
-	padding:2em;
-	
-}
+    h1,
+    h2,
+    h3 {
+        font-family: 'Georgia', Times, Times New Roman, serif;
+    }
 
-#navbar a {
-	text-decoration: none;
-	color: rgba(0, 0, 0, 0.5);
-}
-
-#navbar a:hover {
-	text-decoration: underline;
-}
-
-#abt, #cont  {
-	padding-right: 2em;
-	border-right: 1px solid rgba(0, 0, 0, 0.2);
-}
-
-.name {
-	background-color:rgb(0,174,167);
-	width:180px;
-	height:65px;
-	position:relative;
-	left: 100px;
-	font-size:1.2em;
-	text-align: center;
-	color:rgb(255, 255, 255);
-	border-color:#cccccc;
-
-}
-
-.name h1 {
-	padding-top:1em;
-}
-
-
-
-/* MAIN CONTENT */
-
-.main {
-	background-color: rgb(235, 235, 235);
-	border-top:1px solid rgba(0, 0, 0, 0.3);
-	height: 100%;
-}
-
-#contact {
-	width:410px;
-	background-color: rgb(255, 255, 255);
-	padding:18px;
-	position:relative;
-	left:100px;
-	top:25px;
-}
-
-#contact h1 {
-	font-weight:600;
-	font-size:1.2em;
-	color:#4aaaa5;
-	border-bottom: 2px solid rgba(0, 0, 0, 0.1);
-	padding-bottom: 22px;
-
-}
-
-
-#contact p {
-	font-size:14px;
-	margin-top:20px;
-	margin-bottom:-10px;
-} 
-
-
-input {
-	border:1px solid rgba(0, 0, 0, 0.1);
-	padding:5px;
-	width:98%;
-
-}
-
-
-
-textarea {
-	border:1px solid rgba(0, 0, 0, 0.1);
-	overflow: auto;
-	height:145px;
-	width: 100%;
-
-}
-
-.button {
-	background-color:rgb(0,174,167);
-	color:rgb(255, 255, 255);
-	padding: 10px 20px;
-	margin-top:14px;
-	font-size:14px;
-	font-weight: lighter;
-	width:90px;
-}
-
-/* SIDE BAR/SOCIAL MEDIA */
-
-
-aside {
-	background-color: rgb(255, 255, 255);
-	width:130px;
-	padding:20px;
-	position:relative;
-	top:-28em;
-	right:215px;
-	float:right;
-}
-
-aside h2 {
-	font-weight:600;
-	font-size:.9em;
-	color:rgb(0,174,167);
-	border-bottom: 2px solid rgba(0, 0, 0, 0.1);
-	padding-bottom: 22px;
-	text-align: center;
-}
-
-aside img {
-	height:40px;
-	width:40px;
-	padding:10px;
-	display:inline-block;
-}
-
-/* FOOTER AREA */
-
-
-.footer {
-    background-color:#666666;
-    border-top: 5px solid rgb(0,174,167);
-    height: 58px;
-    margin: auto;
-    position: fixed;
-    bottom: 0;
-    width: 960px;
-}
-
-.footer p {
-	text-align: center;
-	color:rgba(255, 255, 255, .5);
-	margin-top:26px;
-	font-size:10px;
-}
-
-
-
-
-@media only screen and (max-width: 980px) {
     body {
-        border: 1px solid black;
-        width: 100%;
+        margin: 0 auto;
+        width: 960px;
     }
-	#navbar {
-		position:relative;
-		left:-78px;
-	
-
-	}
-    .name {
-    	
-    	width:152px;
-    }
-
-    /* MAIN CONTENT */
-    .main {
-        overflow: auto;
-        width: 100%;
-    }
-
-    #about {
-        width: 256px;
-    }
-
-
-
-    #about img {
-        width: inherit;
-        height: 165px;
-        float: none;
-    }
-
-    /* SIDE BAR/SOCIAL MEDIA */
-    aside {
-        width: 164px;
-        padding: 20px;
-        position: relative;
-        top: -27.92em;
-        left:36em;
-        float: left;
-    }
-
-    aside img {
-        height: 40px;
-        width: 40px;
-        padding: 10px;
-        float: left;
-        margin-left: 15px;
-    }
-
-    /* FOOTER AREA */
-    .footer {
-        width: 100%;
-    }
-}
-
-
-@media screen and (max-width: 768px) and (min-width: 641px) {
-    body {
-        border: 1px solid black;
-        width: 100%;
-    }
-
-    .clearfix::after {
-        content: “”;
-        display: block;
-        clear: both;
-    }
-
-
-    .name {
-        background-color: rgb(0, 174, 167);
-        width: 195px;
-        height: 70px;
-        position: relative;
-        left: 16px;
-        font-size: 1.2em;
-        text-align: center;
-    }
+    /* HEADER AREA */
 
     #navbar {
         position: relative;
-        left: 0;
+        left: -20%;
         font-family: Arial;
         font-size: .8em;
         color: rgba(255, 255, 255, 0.5);
@@ -277,169 +38,377 @@ aside img {
         padding: 2em;
     }
 
-    /* MAIN CONTENT */
-    .main {
-        overflow: auto;
-        width: 100%;
+    #navbar a {
+        text-decoration: none;
+        color: rgba(0, 0, 0, 0.5);
     }
 
-    #about {
-        width: 565px;
-        position: relative;
-        left: 75px;
-        top: 25px;
+    #navbar a:hover {
+        text-decoration: underline;
     }
 
-
-
-    #about img {
-        width: 260px;
-        height: 195px;
-        float: left;
+    #abt,
+    #cont {
+        padding-right: 2em;
+        border-right: 1px solid rgba(0, 0, 0, 0.2);
     }
-
-    /* SIDE BAR/SOCIAL MEDIA */
-    aside {
-        clear: both;
-        margin-bottom: 100px;
-        height: auto;
-        float: left;
-        width: 565px;
-        padding: 18px;
-        position: relative;
-        top: 60px;
-        left: 75px;
-    }
-
-    aside h2 {
-        border-bottom: 2px solid rgba(0, 0, 0, 0.1);
-        font-size: 1.2em;
-        margin-top: 10px;
-    }
-
-    span {
-        float: left;
-        margin-top: -10px;
-    }
-
-    .connect {
-        clear: both;
-        float: left;
-    }
-
-    aside img {
-        height: 40px;
-        width: 40px;
-        padding: 10px;
-        margin-top: 10px;
-        margin-left: 15px;
-    }
-
-    /* FOOTER AREA */
-    .footer {
-        position: fixed;
-        bottom: 0;
-        width: 100%;
-        height:72px;
-        float: left;
-    }
-}
-
-
-@media screen and (max-width: 640px) and (min-width:0) {
-    body {
-        border: 1px solid black;
-    }
-
-	#navbar {
-	    position: relative;
-	    top:85px;
-	    left:10%;
-	   	float:left;
-	    font-family: Arial;
-	    font-size: 1.4em;
-	    color: rgba(255, 255, 255, 0.5);
-	    word-spacing: 2em;
-	    padding: 2em;
-	    padding-right:0;
-	}
 
     .name {
         background-color: rgb(0, 174, 167);
-        width: 100%;
-        height: 85px;
-        position:relative;
-        top:-115px;
-        left:0;
+        width: 180px;
+        height: 65px;
+        position: relative;
+        left: 100px;
+        font-size: 1.2em;
         text-align: center;
-        clear:both;
+        color: rgb(255, 255, 255);
+        border-color: #cccccc;
     }
 
     .name h1 {
-    	margin-top:15px;
-    	font-size:1.5em;
+        padding-top: 1em;
     }
-
     /* MAIN CONTENT */
+
     .main {
-        overflow: auto;
-        width: 100%;
-
+        background-color: rgb(235, 235, 235);
+        border-top: 1px solid rgba(0, 0, 0, 0.3);
+        height: 100%;
     }
 
-    #about {
-        width: 560px;
-		position: relative;
-        left: 15px;
-        top: 25px;
-		
-
-    }
-
-	#about h1 {
-		font-size:2em;
-   }
-
-    #about img {
-        width: inherit;
-        height: 375px;
-        float: none;
-    }
-
-    /* SIDE BAR/SOCIAL MEDIA */
-    aside {
-        width: 560px;
-        padding: 20px;
-        float:left;
-        margin-bottom:100px;
+    #contact {
+        width: 410px;
+        background-color: rgb(255, 255, 255);
+        padding: 18px;
         position: relative;
-        top: 50px;
-        left: 15px;
-        clear:both;
+        left: 100px;
+        top: 25px;
     }
-	
-	aside h2 {
-		margin:15px;
 
-	}
+    #contact h1 {
+        font-weight: 600;
+        font-size: 1.2em;
+        color: #4aaaa5;
+        border-bottom: 2px solid rgba(0, 0, 0, 0.1);
+        padding-bottom: 22px;
+    }
 
 
-    span {
-    	float: left;
-    	font-size: 2em;
-        margin-top: -15px;
+    #contact p {
+        font-size: 14px;
+        margin-top: 20px;
+        margin-bottom: -10px;
+    }
+
+
+    input {
+        border: 1px solid rgba(0, 0, 0, 0.1);
+        padding: 5px;
+        width: 98%;
+    }
+
+
+
+    textarea {
+        border: 1px solid rgba(0, 0, 0, 0.1);
+        overflow: auto;
+        height: 145px;
+        width: 100%;
+    }
+
+    .button {
+        background-color: rgb(0, 174, 167);
+        color: rgb(255, 255, 255);
+        padding: 10px 20px;
+        margin-top: 14px;
+        font-size: 14px;
+        font-weight: lighter;
+        width: 90px;
+    }
+    /* SIDE BAR/SOCIAL MEDIA */
+
+    aside {
+        background-color: rgb(255, 255, 255);
+        width: 130px;
+        padding: 20px;
+        position: relative;
+        top: -28em;
+        right: 215px;
+        float: right;
+    }
+
+    aside h2 {
+        font-weight: 600;
+        font-size: .9em;
+        color: rgb(0, 174, 167);
+        border-bottom: 2px solid rgba(0, 0, 0, 0.1);
+        padding-bottom: 22px;
+        text-align: center;
     }
 
     aside img {
         height: 40px;
         width: 40px;
         padding: 10px;
-        float: left;
-        margin-left: 15px;
+        display: inline-block;
+    }
+    /* FOOTER AREA */
+
+    .footer {
+        background-color: #666666;
+        border-top: 5px solid rgb(0, 174, 167);
+        height: 58px;
+        margin: auto;
+        position: fixed;
+        bottom: 0;
+        width: 960px;
     }
 
-    /* FOOTER AREA */
-    .footer {
-        width: 100%;
+    .footer p {
+        text-align: center;
+        color: rgba(255, 255, 255, .5);
+        margin-top: 26px;
+        font-size: 10px;
     }
-}
+
+
+
+
+    @media only screen and (max-width: 980px) {
+        body {
+            width: 100%;
+        }
+        #navbar {
+            position: relative;
+            left: -78px;
+        }
+        .name {
+
+            width: 152px;
+        }
+
+        /* MAIN CONTENT */
+        .main {
+            overflow: auto;
+            width: 100%;
+        }
+
+        #about {
+            width: 256px;
+        }
+
+
+
+        #about img {
+            width: inherit;
+            height: 165px;
+            float: none;
+        }
+
+        /* SIDE BAR/SOCIAL MEDIA */
+        aside {
+            width: 164px;
+            padding: 20px;
+            position: relative;
+            top: -27.92em;
+            left: 36em;
+            float: left;
+        }
+
+        aside img {
+            height: 40px;
+            width: 40px;
+            padding: 10px;
+            float: left;
+            margin-left: 15px;
+        }
+
+        /* FOOTER AREA */
+        .footer {
+            width: 100%;
+        }
+    }
+
+
+    @media screen and (max-width: 768px) and (min-width: 641px) {
+        body {
+            width: 100%;
+        }
+
+        .clearfix::after {
+            content: “”;
+            display: block;
+            clear: both;
+        }
+
+
+        .name {
+            background-color: rgb(0, 174, 167);
+            width: 195px;
+            height: 70px;
+            position: relative;
+            left: 18px;
+            font-size: 1.2em;
+            text-align: center;
+        }
+
+        #navbar {
+            position: relative;
+            left: 0;
+            font-family: Arial;
+            font-size: .8em;
+            color: rgba(255, 255, 255, 0.5);
+            float: right;
+            word-spacing: 2em;
+            padding: 2em;
+        }
+
+        /* MAIN CONTENT */
+        .main {
+            overflow: auto;
+            width: 100%;
+        }
+
+        #contact {
+            width: 90%;
+            padding: 18px;
+            position: relative;
+            left: 18px;
+            top: 25px;
+        }
+
+        #contact h1 {
+            font-weight: 600;
+            font-size: 1.2em;
+            color: #4aaaa5;
+            border-bottom: 2px solid rgba(0, 0, 0, 0.1);
+            padding-bottom: 22px;
+        }
+
+
+        #contact p {
+            font-size: 14px;
+            margin-top: 20px;
+            margin-bottom: -10px;
+        }
+
+        /* SIDE BAR/SOCIAL MEDIA */
+        aside {
+            clear: both;
+            margin-bottom: 100px;
+            height: auto;
+            float: left;
+            width: 90%;
+            padding: 18px;
+            position: relative;
+            top: 60px;
+            left: 18px;
+        }
+
+        aside h2 {
+            margin: 15px;
+        }
+
+
+        span {
+            float: left;
+            font-size: 1.5em;
+            margin-top: -10px;
+        }
+
+        aside img {
+            height: 40px;
+            width: 40px;
+            padding: 10px;
+            float: left;
+            margin-left: 15px;
+        }
+    }
+
+
+        @media screen and (max-width: 640px) and (min-width:0) {
+
+            #navbar {
+                position: relative;
+                top: 85px;
+                left: 10%;
+                float: left;
+                font-family: Arial;
+                font-size: 1.4em;
+                color: rgba(255, 255, 255, 0.5);
+                word-spacing: 2em;
+                padding: 2em;
+                padding-right: 0;
+            }
+
+            .name {
+                background-color: rgb(0, 174, 167);
+                width: 100%;
+                height: 85px;
+                position: relative;
+                top: -115px;
+                left: 0;
+                text-align: center;
+                clear: both;
+            }
+
+           
+
+            /* MAIN CONTENT */
+            .main {
+                overflow: auto;
+                width: 100%;
+            }
+
+            #contact {
+            	width:570px;
+            	margin:0 auto;
+            	position:relative;
+            	left:0px;
+            }
+
+            #contact h1 {
+                margin:15px;
+                font-size: 2em;
+            }
+           
+           	#contact > h1, form {
+           		margin:15px;
+           	}
+
+            /* SIDE BAR/SOCIAL MEDIA */
+            aside {
+                width: 90%;
+                padding: 18px;  
+                margin-bottom: 100px;
+                position: relative;
+                top: 50px;
+                left: 16px;
+                clear: both;
+            }
+
+            aside h2 {
+                margin: 15px;
+            }
+
+
+            span {
+                float: left;
+                font-size: 1.5em;
+                margin-top: -15px;
+            }
+
+            aside img {
+                height: 40px;
+                width: 40px;
+                padding: 10px;
+                float: left;
+                margin-left: 15px;
+            }
+
+
+            /* FOOTER AREA */
+            .footer {
+                width: 100%;
+            }
+        }
