--- a/assets/css/portfolio-style.css
+++ b/assets/css/portfolio-style.css
@@ -1,180 +1,188 @@
 /* BASE STYLES */
 
 * {
-	margin: 0 auto;
+    margin: 0 auto;
 }
 
-body, html {
-	height: 100%; 
+body,
+html {
+    height: 100%;
 }
 
 
 p {
-	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-	color:#777777
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    color: #777777
 }
 
-h1,h2,h3 {
-	font-family: 'Georgia', Times, Times New Roman, serif;
+h1,
+h2,
+h3 {
+    font-family: 'Georgia', Times, Times New Roman, serif;
 }
 
 body {
-	margin: 0 auto;
-	width:960px;
+    margin: 0 auto;
+    width: 960px;
 }
+
+
 
 
 /* HEADER AREA */
 
 #navbar {
-	position:relative;
-	left:-20%;
-	font-family: Arial;
-	font-size:.8em;
-	color: rgba(255, 255, 255, 0.5);
-	float:right;
-	word-spacing: 2em;
-	padding:2em;
-	
+    position: relative;
+    left: -20%;
+    font-family: Arial;
+    font-size: .8em;
+    color: rgba(255, 255, 255, 0.5);
+    float: right;
+    word-spacing: 2em;
+    padding: 2em;
 }
 
 #navbar a {
-	text-decoration: none;
-	color: rgba(0, 0, 0, 0.5);
+    text-decoration: none;
+    color: rgba(0, 0, 0, 0.5);
 }
 
 #navbar a:hover {
-	text-decoration: underline;
+    text-decoration: underline;
 }
 
 
-#abt, #cont  {
-	padding-right: 2em;
-	border-right: 1px solid rgba(0, 0, 0, 0.2);
+#abt,
+#cont {
+    padding-right: 2em;
+    border-right: 1px solid rgba(0, 0, 0, 0.2);
 }
 
 .name {
-	background-color:rgb(0,174,167);
-	width:180px;
-	height:65px;
-	position:relative;
-	left: 100px;
-	font-size:1.2em;
-	text-align: center;
-	color:rgb(255, 255, 255);
-	border-color:#cccccc;
-
+    background-color: rgb(0, 174, 167);
+    width: 180px;
+    height: 65px;
+    position: relative;
+    left: 100px;
+    font-size: 1.2em;
+    text-align: center;
+    color: rgb(255, 255, 255);
+    border-color: #cccccc;
 }
 
 .name h1 {
-	padding-top:1em;
+    padding-top: 1em;
 }
+
+
 
 
 
 /* MAIN CONTENT */
 
 .main {
-	background-color: rgb(235, 235, 235);
-	border-top:1px solid rgba(0, 0, 0, 0.3);
-	height: 100%;
+    background-color: rgb(235, 235, 235);
+    border-top: 1px solid rgba(0, 0, 0, 0.3);
+    height: 100%;
 }
 
 #portfolio {
-	width:410px;
-	background-color: rgb(255, 255, 255);
-	padding:18px;
-	position:relative;
-	left:100px;
-	top:25px;
-	overflow: auto;
+    width: 410px;
+    background-color: rgb(255, 255, 255);
+    padding: 18px;
+    position: relative;
+    left: 100px;
+    top: 25px;
+    overflow: auto;
 }
 
 #portfolio h1 {
-	font-weight:600;
-	font-size:1.2em;
-	color:rgb(0,174,167);
-	border-bottom: 2px solid rgba(0, 0, 0, 0.1);
-	padding-bottom: 22px;
-
+    font-weight: 600;
+    font-size: 1.2em;
+    color: rgb(0, 174, 167);
+    border-bottom: 2px solid rgba(0, 0, 0, 0.1);
+    padding-bottom: 22px;
 }
 
 #portfolio img {
-	height:142px;
-	width:188px;
-	margin-top:20px;
-
-} 
+    height: 142px;
+    width: 188px;
+    margin-top: 20px;
+}
 
 li {
-	float:left;
+    float: left;
 }
 
 
-#elon, #personal-web, #google, #original-port {
-	background-color:rgb(0,174,167);
-	width:188px;
-	height:30px;
-	font-size:1em;
-	text-align: center;
-	color:rgb(255, 255, 255);
-	border-color:#cccccc;
+#elon,
+#personal-web,
+#google,
+#original-port {
+    background-color: rgb(0, 174, 167);
+    width: 188px;
+    height: 30px;
+    font-size: 1em;
+    text-align: center;
+    color: rgb(255, 255, 255);
+    border-color: #cccccc;
 }
 
 .banner #elon {
-	margin-right:34px;
+    margin-right: 34px;
 }
 
 .banner #google {
-	margin-right:34px;
+    margin-right: 34px;
 }
 
 .banner {
-	position: relative;
-	top:-40px;
-
+    position: relative;
+    top: -40px;
 }
 
 .banner h3 {
-	padding-top:10px;
+    padding-top: 10px;
 }
+
+
 
 
 /* SIDE BAR/SOCIAL MEDIA */
 
-
 aside {
-	background-color: rgb(255, 255, 255);
-	width:130px;
-	padding:20px;
-	position:relative;
-	top:-29em;
-	right:215px;
-	float:right;
+    background-color: rgb(255, 255, 255);
+    width: 130px;
+    padding: 20px;
+    position: relative;
+    top: -29em;
+    right: 215px;
+    float: right;
 }
 
 aside h2 {
-	font-weight:600;
-	font-size:.9em;
-	color:rgb(0,174,167);
-	border-bottom: 2px solid rgba(0, 0, 0, 0.1);
-	padding-bottom: 22px;
-	text-align: center;
+    font-weight: 600;
+    font-size: .9em;
+    color: rgb(0, 174, 167);
+    border-bottom: 2px solid rgba(0, 0, 0, 0.1);
+    padding-bottom: 22px;
+    text-align: center;
 }
 
 aside img {
-	height:40px;
-	width:40px;
-	padding:10px;
-	display:inline-block;
+    height: 40px;
+    width: 40px;
+    padding: 10px;
+    display: inline-block;
 }
+
+
 
 /* FOOTER AREA */
 
-
 .footer {
-    background-color:#666666;
-    border-top: 5px solid rgb(0,174,167);
+    background-color: #666666;
+    border-top: 5px solid rgb(0, 174, 167);
     height: 58px;
     margin: auto;
     position: fixed;
@@ -183,8 +191,278 @@ aside img {
 }
 
 .footer p {
-	text-align: center;
-	color:rgba(255, 255, 255, .5);
-	margin-top:26px;
-	font-size:10px;
+    text-align: center;
+    color: rgba(255, 255, 255, .5);
+    margin-top: 26px;
+    font-size: 10px;
+}
+
+
+@media only screen and (max-width: 980px) {
+    body {
+        width: 100%;
+    }
+    #navbar {
+        position: relative;
+        left: -78px;
+    }
+    .name {
+        position: relative;
+        left: 80px;
+        width: 152px;
+        padding: 0 10px;
+    }
+
+    /* MAIN CONTENT */
+    .main {
+        overflow: auto;
+        width: 100%;
+    }
+
+    #portfolio {
+        position: relative;
+        left: 80px;
+        width: 255px;
+    }
+
+    ul li {
+        float: left;
+    }
+    #portfolio img {
+        width: 260px;
+        height: 165px;
+    }
+
+
+    #about img {
+        width: inherit;
+        height: 165px;
+        float: none;
+    }
+
+
+    #elon,
+    #personal-web,
+    #google,
+    #original-port {
+        background-color: rgb(0, 174, 167);
+        width: 260px;
+        height: 30px;
+        font-size: 1em;
+        position: relative;
+        text-align: center;
+        color: rgb(255, 255, 255);
+        border-color: #cccccc;
+    }
+
+    /* SIDE BAR/SOCIAL MEDIA */
+    aside {
+        width: 164px;
+        padding: 20px;
+        position: relative;
+        top: -60.3em;
+        left: 26em;
+        float: left;
+    }
+
+    aside img {
+        height: 40px;
+        width: 40px;
+        padding: 10px;
+        float: left;
+        margin-left: 15px;
+    }
+
+
+
+    /* FOOTER AREA */
+    .footer {
+        width: 100%;
+    }
+}
+
+
+@media screen and (max-width: 768px) and (min-width: 641px) {
+    body {
+        width: 100%;
+    }
+
+    .clearfix::after {
+        content: “”;
+        display: block;
+        clear: both;
+    }
+
+
+    .name {
+        background-color: rgb(0, 174, 167);
+        width: 195px;
+        height: 70px;
+        position: relative;
+        left: 18px;
+        font-size: 1.2em;
+        text-align: center;
+    }
+
+    #navbar {
+        position: relative;
+        left: 0;
+        font-family: Arial;
+        font-size: .8em;
+        color: rgba(255, 255, 255, 0.5);
+        float: right;
+        word-spacing: 2em;
+        padding: 2em;
+    }
+
+    /* MAIN CONTENT */
+    .main {
+        overflow: auto;
+        width: 100%;
+    }
+
+    #portfolio {
+        width: 90%;
+        position: relative;
+        left: 18px;
+    }
+
+    /* SIDE BAR/SOCIAL MEDIA */
+    aside {
+        clear: both;
+        margin-bottom: 100px;
+        height: auto;
+        float: left;
+        width: 90%;
+        padding: 18px;
+        position: relative;
+        top: 60px;
+        left: 18px;
+    }
+
+    aside h2 {
+        margin: 15px;
+    }
+
+
+    span {
+        float: left;
+        font-size: 1.5em;
+        margin-top: -10px;
+    }
+
+
+    aside img {
+        height: 40px;
+        width: 40px;
+        padding: 10px;
+        float: left;
+        margin-left: 15px;
+    }
+}
+
+
+@media screen and (max-width: 640px) and (min-width:0) {
+
+    #navbar {
+        position: relative;
+        top: 85px;
+        left: 10%;
+        float: left;
+        font-family: Arial;
+        font-size: 1.4em;
+        color: rgba(255, 255, 255, 0.5);
+        word-spacing: 2em;
+        padding: 2em;
+        padding-right: 0;
+    }
+
+    .name {
+        background-color: rgb(0, 174, 167);
+        width: 100%;
+        height: 85px;
+        position: relative;
+        top: -115px;
+        left: 0;
+        text-align: center;
+        clear: both;
+    }
+    .name h1 {
+        margin-left: -40px;
+    }
+
+
+    /* MAIN CONTENT */
+    .main {
+        overflow: auto;
+        width: 100%;
+    }
+
+    #portfolio {
+        width: 90%;
+        position: relative;
+        left: 18px;
+    }
+
+    #portfolio h1 {
+        padding: 20px 0;
+        font-size: 2em;
+    }
+
+    #portfolio img {
+        padding: 20px 0;
+        height: auto;
+        width: 100%;
+    }
+
+    #elon,
+    #personal-web,
+    #google,
+    #original-port {
+        background-color: rgb(0, 174, 167);
+        width: 100%;
+        height: 30px;
+        font-size: 1em;
+        position: relative;
+        text-align: center;
+        color: rgb(255, 255, 255);
+        border-color: #cccccc;
+    }
+
+
+    /* SIDE BAR/SOCIAL MEDIA */
+    aside {
+        width: 90%;
+        padding: 18px;
+        margin-bottom: 100px;
+        position: relative;
+        top: 50px;
+        left: 16px;
+        clear: both;
+    }
+
+    aside h2 {
+        margin: 15px;
+    }
+
+
+    span {
+        float: left;
+        font-size: 1.5em;
+        margin-top: -15px;
+    }
+
+    aside img {
+        height: 40px;
+        width: 40px;
+        padding: 10px;
+        float: left;
+        margin-left: 15px;
+    }
+
+
+    /* FOOTER AREA */
+    .footer {
+        width: 100%;
+    }
 }
